# lllm

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  THIRD_PARTY  a.out  build.sh  count.sh  demo  test  test.cpp  test.sh
include/: Env.hpp  Reader.hpp  Value.hpp  ValueABI.hpp  ValueIO.hpp  ValueVisitor.hpp  Value_internals.hpp  eval.hpp  values.hpp
include/analyser/: TypeSet.hpp
include/lllm/: Analyzer.hpp  Builtins.hpp  EscapeAnalyzer.hpp  Evaluator.hpp  GlobalScope.hpp  Jit.hpp  Obj.hpp  Reader.hpp  SExpr.hpp~ (Case Conflict 1)  SExpr.hpp~ (Case Conflict 2)  SExpr_concrete.inc~ (Case Conflict 1)  Sexpr.inc~ (Case Conflict 1)  ast.hpp  builtins.hpp  builtins.hpp~ (Case Conflict 1)  eval.hpp  lllm.hpp  predef.hpp  reader.hpp  sexpr.hpp  value.hpp  vm.hpp
include/lllm/analyzer/: Ast.hpp  Ast.inc  Scope.hpp  Test.inc  TypeSet.hpp
include/lllm/ast/: Ast.hpp  Ast.inc  AstIO.hpp  Ast_concrete.inc
include/lllm/eval/: Env.hpp
include/lllm/reader/: Sexpr.hpp  SourceLocation.hpp  Tokenizer.hpp
include/lllm/sexpr/: Sexpr.hpp  Sexpr.inc  SexprIO.hpp  Sexpr_concrete.inc
include/lllm/util/: Array.tpp  EscapeStatus.hpp  InternedString.hpp  Scope.tpp  SourceLocation.hpp  TypeSet.hpp  fail.hpp  util_io.hpp
include/lllm/value/: Value.hpp  Value.inc  ValueIO.hpp
include/lllm/values/: Value.hpp  Value.inc  ValueIO.hpp  Value_for_impl.inc
include/old/: Env.hpp  Source.hpp  SpecialForms.hpp  ValueIO.hpp  eval.hpp  values.hpp
include/reader/: ParseTree.hpp  SourceLocation.hpp  Tokenizer.hpp  reader.hpp
include/util/: fail.hpp
include/values/: Value.hpp
lib/jit/: jit-insn.h
lib/libjit/: CMakeLists.txt
lib/libjit/include/jit/: jit-insn.h
lib/libjit/jit/: jit-insn.c
lib/libjit/tools/: lex.yygen-rules-scanner.c
lib/p99/: ChangeLog
old/include/lllm/: analyzer.hpp  reader.hpp  values.hpp
old/include/lllm/analyzer/: Ast.inc  AstIO.hpp  Ast_concrete_only.inc  Scope.hpp  TypeSet.hpp
old/include/lllm/eval/: Env.hpp  builtins.cpp
old/include/lllm/reader/: Sexpr.inc  SexprIO.hpp
old/include/lllm/values/: Value.hpp  Value.inc
old/src/: CMakeLists.txt  test_1_reader.cpp  test_2_analyzer.cpp  test_3_eval.cpp  vm.cpp
old/src/analyzer/: AST.cpp~ (Case Conflict 1)  AstIO.cpp  AstIO.cpp~ (Case Conflict 1)  CMakeLists.txt  Scope.cpp  TypeSet.cpp
old/src/eval/: eval.cpp
old/src/reader/: Sexpr.cpp  reader.cpp
old/src/util/: CMakeLists.txt
old/src/values/: ValueIO.cpp
old_old/include/: Value.hpp  ValueVisitor.hpp
old_old/src/code/: SpecialForms.cpp
old_old/src/eval/: Env.cpp  Makefile  cmake_install.cmake
old_old/src/reader/: CMakeLists.txt  Source.cpp  read.cpp
old_old/src/value/: Makefile  cmake_install.cmake
präsentation/: demo  make.sh  pres.aux  pres.nav  pres.out  pres.tex  pres.toc  repl  repl-demo
src/: .gitignore  Analyzer.cpp  Builtins.cpp  Builtins_binary_arithmetic.inc  CMakeLists.txt  EscapeAnalyzer.cpp  Evaluator.cpp  GlobalScope.cpp  Jit (copy).cpp  Jit.cpp  Reader.cpp  builtins.cpp  lllm.cpp  lllm_old.cpp  repl.cpp  test_1_reader.cpp  test_2_analyzer.cpp  test_3_eval.cpp  test_4_jit.cpp
src/analyzer/: Ast.cpp  AstIO.cpp  CMakeLists.txt  Scope.cpp  analyzer.cpp
src/ast/: Ast.cpp  AstIO.cpp  CMakeLists.txt
src/eval/: CMakeLists.txt  Env.cpp  eval.cpp
src/fail/: CMakeLists.txt  fail.cpp
src/old/eval/: CMakeLists.txt  eval.cpp
src/old/value/: Option.hpp  Value.cpp  ValueIO.cpp  builtins.cpp
src/reader/: CMakeLists.txt  ParseTree.cpp  Reader.cpp  SexprIO.cpp  Source.cpp  SourceLocation.cpp  Tokenizer.cpp  read.cpp  reader.cpp
src/sexpr/: CMakeLists.txt  Sexpr.cpp  SexprIO.cpp
src/util/: CMakeLists.txt  Env.cpp  EscapeStatus.cpp  InternedString.cpp  Scope.cpp  SourceLocation.cpp  TypeSet.cpp  fail.cpp  util_io.cpp
src/value/: CMakeLists.txt  Value.cpp  ValueIO.cpp  builtins.cpp
src/values/: CMakeLists.txt  Value.cpp
